# imseq

./: .travis.yml  CMakeLists.txt  CNAME  Homo.Sapiens.IGL.fa  Homo.Sapiens.TRA.fa  INFO  README.md  _config.yml  aa_translate.h  about.md  bibcite.md  bibcite.txt  cdr3_cli.h  cdr_utils.h  clone.h  cluster_result.h  collection_utils.h  extdir_oldir_conversion.h  fastaformat.md  file_utils.h  globalData.h  index.html  index.md  manual.md  outputFiles.md  params.json  progress_bar.cpp  progress_bar.h  referencePreparation.h  segment_meta.cpp  segment_meta.h  sequence_data.h  timeFormat.h  tutorial.md  ugm-tut1.md  ugm-tut2-sol.md  ugm-tut2.md  ugm-tut3-sol.md  ugm-tut3.md  ugm.md  (+1 more)
_includes/: footer.html  head.html
binaries/: imseq-1.0-linux64.tgz  imseq-1.0-mac64.tgz  imseq_1.0-linux64.tgz  imseq_1.0-mac64.tgz  seqan-imseq_1.0-source.tgz
cmake/: SeqAn.cmake
examples/: README  example_input_sim.fa  top10PlotPDF.R
pkg/: README
references/: Homo.Sapiens.IGH.fa  Homo.Sapiens.IGK.fa  Homo.Sapiens.TRB.fa  Macaca.Fascicularis.IGH.fa  Macaca.Mulatta.IGH.fa  Mus.Musculus.IGH.fa  Mus.Musculus.IGH.gapped.fa  Rattus.Norwegicus.IGH.fa
src/: CMakeLists.txt  LICENSE  README  aa_translate.h  barcode_correction.h  cdr3_cli.h  clone_store.h  cluster_log.cpp  cluster_log.h  cluster_result.cpp  cluster_result.h  collection_utils.h  fastq_io.h  fastq_io_types.h  fastq_multi_record.h  fastq_multi_record_types.cpp  fastq_multi_record_types.h  fixed_size_types.h  globalData.h  imseq.cpp  imseq.h  input_information.h  logging.cpp  logging.h  overlap_specs.h  progress_bar.cpp  qc_basics.h  referencePreparation.h  reject.h  runtime_options.h  segment_ambiguity.h  sequence_data.h  sequence_data_types.h  thread_check.h  thread_pool.cpp  thread_pool.h  version_number.cpp  version_number.h  vjMatching.h
unit_test/: CMakeLists.txt  CmakeLists.txt  unit_tests_imseq.cpp  unit_tests_imseq_barcode_correction.h  unit_tests_imseq_fastq_io.h  unit_tests_imseq_fastq_multi_record.h  unit_tests_imseq_qc_basics.h
util/: mkBinTarball  mkSrcTarball  v_ref_generator.py
util/bin-tarball/: README
util/src-tarball/: README
